# voxelvolumetracer

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp  test.cpp  vec3.cpp
